<resources>
    <string name="app_name">sanggar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jam_operasional_sangggar">Jam Operasional Sanggar</string>
    <string name="kegiatan_sanggar">Kegiatan Sanggar</string>
    <string name="tambah_kegiatan">+ Tambah Kegiatan</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="judul_kegiatan">Judul</string>
    <string name="deskripsi_kegiatan">Deskripsi</string>
    <string name="simpan">Simpan</string>
    <string name="error_cannot_be_empty">%1$s cannot be empty</string>
    <string name="error_input_must_more_than">must be at least %1$d character</string>
    <string name="error_cannot_be_zero">%1$s cannot be 0 if product available</string>
    <string name="jadwal_sanggar">Jadwal Sanggar</string>
    <string name="tambah_jadwal_sanggar">+ Tambah Jadwal Sanggar</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="batal">Batal</string>
    <string name="hari">Hari</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="nama_sanggar">Nama Sanggar</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="bank">Bank</string>
    <string name="no_rekening">No Rekening</string>
    <string name="harga_pendaftaran">Biaya Pendaftaran</string>
    <string name="harga_sewa">Biaya Sewa Perjam</string>
    <string name="fasilitas">Fasilitas Studio</string>
    <string name="judul_fasilitas">Judul</string>
    <string name="deskripsi_fasilitas">Deskripsi</string>
    <string name="tambah_fasilitas"> + Tambah Fasilitas Studio</string>
    <string name="forbidden">Forbidden</string>
    <string name="error">Error</string>
    <string name="unprocessed_entity">Unprocessed Entity</string>
    <string name="no_connection">No Connection</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="io_exception">IO Exception</string>
    <string name="platform_transaksi">Platform Transaksi</string>

    <string name="id_pendaftaran">ID: %s</string>


</resources>