<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dp16"
    tools:context=".view.fragment.jam_operasional.JamOperasionalBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:text="Tambah Jam Operasional"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hari"
            android:textSize="18dp"
            android:layout_marginBottom="7dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hari_operasional"
            style="@style/AppTheme.TextInputAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/ac_hari_operasional"
                android:hint="@string/hari"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/jam_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jam Buka" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_jam_mulai"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_jam_mulai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/jam_mulai" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jam Tutup" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_jam_selesai"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_jam_selesai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/jam_selesai" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/dp16"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Status" />-->

            <com.google.android.material.switchmaterial.SwitchMaterial
                app:thumbTint="@color/colorAccent"
                android:id="@+id/switch_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp16"
                android:text="Tutup"/>

<!--        </LinearLayout>-->

        <Button
            android:id="@+id/btn_simpan_jam_operasional"
            style="@style/AppTheme.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/simpan" />

        <Button
            android:id="@+id/btn_batal"
            style="@style/AppTheme.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batal" />
    </LinearLayout>

</FrameLayout>