<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.activity.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:src="@drawable/foto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center">

            <!--            android:src="@drawable/icon_daftar"-->
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="Login Page"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"></TextView>
    </LinearLayout>

    <ScrollView
        android:padding="@dimen/dp16"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_login"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--        <com.rengwuxian.materialedittext.MaterialEditText-->
            <!--            android:id="@+id/input_nama"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:hint="Email"-->
            <!--            android:inputType="textPersonName"-->
            <!--            android:textSize="25dp"-->
            <!--            app:met_floatingLabel="highlight"></com.rengwuxian.materialedittext.MaterialEditText>-->

            <!--        <com.rengwuxian.materialedittext.MaterialEditText-->
            <!--            android:id="@+id/input_nama_ortu"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:hint="Password"-->
            <!--            android:inputType="textPersonName"-->
            <!--            android:textSize="25dp"-->
            <!--            app:met_floatingLabel="highlight"></com.rengwuxian.materialedittext.MaterialEditText>-->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp32"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_register_login"
                style="@style/AppTheme.OutlinedButon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>