<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp16"
    tools:context=".view.fragment.jadwal_sanggar.JadwalSanggarBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp32"
            android:text="@string/jadwal_sanggar"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kategori Latihan"
            android:textSize="18dp"
            android:layout_marginBottom="7dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_kategori_latihan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contoh : Tari Bali" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hari"
            android:textSize="18dp"
            android:layout_marginBottom="7dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hari_jadwal"
            style="@style/AppTheme.TextInputAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/ac_hari_jadwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hari" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Kategori Latihan"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginBottom="7dp"-->
        <!--            android:textSize="18dp"/>-->

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/til_kategori_latihan"-->
        <!--            style="@style/AppTheme.TextInputAutoComplete"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <!--            <AutoCompleteTextView-->
        <!--                android:hint="Cth. Tari Bali, Olah Tubuh, dll"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"/>-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <LinearLayout
            android:id="@+id/jam_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jam_mulai"
                    android:textSize="17dp"
                    android:layout_marginBottom="7dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_jam_mulai"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_jam_mulai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/jam_mulai"
                        android:textSize="17dp"
                        android:layout_marginBottom="7dp"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jam_selesai"
                    android:textSize="17dp"
                    android:layout_marginBottom="7dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_jam_selesai"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_jam_selesai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/jam_selesai"
                        android:textSize="17dp"
                        android:layout_marginBottom="7dp"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biaya Pendaftaran"
            android:textSize="18dp"
            android:layout_marginBottom="7dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_biaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="50000" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_simpan_jadwal"
            style="@style/AppTheme.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/simpan" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/AppTheme.OutlinedButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/batal" />
    </LinearLayout>

</FrameLayout>